docs(readme): add Solr 9.x installation and configuration documentation
- Add Solr 9.x installation instructions using the official tarball
- Add configuration steps for solr.in.sh with required JVM options
- Add resource limits configuration for file descriptors and processes
- Add systemd commands to enable and start Solr service
- Update Solr core configuration instructions to copy files instead of symlinking